Added missing imports

--- a/uqlibrary-filter-group.html
+++ b/uqlibrary-filter-group.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../core-icon/core-icon.html">
 <link rel="import" href="../core-icons/core-icons.html">
 
 
