--- a/uqlibrary-fbs-filter-form.html
+++ b/uqlibrary-fbs-filter-form.html
@@ -14,7 +14,7 @@
 <link rel="import" href="../paper-checkbox/paper-checkbox.html">
 <link rel="import" href="../paper-fab/paper-fab.html">
 <link rel="import" href="../paper-toast/paper-toast.html">
-<link rel="import" href="../core-tooltip/core-tooltip.html">
+<link rel="import" href="../core-icon/core-icon.html">
 <link rel="import" href="uqlibrary-filter-group.html">
 
 <!--
@@ -123,7 +123,7 @@ Element providing solution to no problem in particular.
       observe: {
         'formData.facilities': 'facilitiesChanged',
         'formData.dates': 'initialDatesChanged',
-        'selectedValues': 'selectedValuesChanged',
+        'selectedValues': 'selectedValuesChanged'
       },
 
       created: function() {
