Changes on FBS form.

--- a/demo.html
+++ b/demo.html
@@ -30,7 +30,7 @@
 
       var form = document.querySelector('uqlibrary-fbs-filter-form');
       //form.selectedValues = {};
-      //form.selectedValues = {campus: 'gatton', building: 'gatton:bsl', room: 'gatton:bsl:gr2', date: '9/11/2014', time: '14:45', equipment: {pc: true} };
+      //form.selectedValues = {campus: 'gatton', building: 'gatton:bsl', room: 'gatton:bsl:gr2', date: '9/11/2014', time: '14:45', capacity: 10, duration: 1.5, equipment: {pc: true} };
 
       form.formData.dates = [];
       var today = new Date();
