--- a/test/uqlibrary-fbs-filter-form-basic.html
+++ b/test/uqlibrary-fbs-filter-form-basic.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <title>uqlibrary-fbs-filter-form</title>
 
-  <script src="../../platform/platform.js"></script>
+  <script src="../../webcomponentsjs/webcomponents.min.js"></script>
   <link rel="import" href="../../polymer-test-tools/tools.html">
   <script src="../../polymer-test-tools/htmltest.js"></script>
 
