Enabled forked version of md-timepicker

--- a/uqlibrary-fbs-filter-form.html
+++ b/uqlibrary-fbs-filter-form.html
@@ -9,7 +9,7 @@
 <link rel="import" href="../paper-dropdown-menu/paper-dropdown-menu.html">
 <link rel="import" href="../paper-item/paper-item.html">
 <link rel="import" href="../paper-input/paper-input.html">
-<!--<link rel="import" href="../md-timepicker/md-timepicker.html">-->
+<link rel="import" href="../md-timepicker/md-timepicker.html">
 <link rel="import" href="../paper-slider/paper-slider.html">
 <link rel="import" href="../paper-checkbox/paper-checkbox.html">
 <link rel="import" href="../paper-fab/paper-fab.html">
@@ -68,7 +68,7 @@ Element providing solution to no problem in particular.
         </paper-dropdown-menu>
 
         <paper-input floatingLabel id="time" on-focus="{{showTimepicker}}" value="{{selectedTime}}" label="Now"></paper-input>
-        <!--<md-timepicker id="timepicker" on-time-selected="{{timeSelectedHandler}}" hidden></md-timepicker>-->
+        <md-timepicker id="timepicker" on-time-selected="{{timeSelectedHandler}}" hidden></md-timepicker>
 
         <div class="sliderWrapper" layout horizontal justified center>
           <div>Duration</div>
