--- a/uqlibrary-filter-group.html
+++ b/uqlibrary-filter-group.html
@@ -12,7 +12,7 @@
       <core-icon icon="{{icon}}"></core-icon>
       <div class="group-label">{{label}}</div>
     </div>
-    <div class="group-content">
+    <div id="groupContent" class="group-content">
       <content></content>
     </div>
   </template>
@@ -21,6 +21,11 @@
 
 
     Polymer({
+
+
+      ready: function() {
+
+      }
     });
 
   </script>
