--- a/uqlibrary-fbs-filter-form.html
+++ b/uqlibrary-fbs-filter-form.html
@@ -41,11 +41,11 @@ Element providing solution to no problem in particular.
       <paper-shadow>
         <div class="filterWrapper">
         <uqlibrary-filter-group label="Campus" icon="communication:location-on">
-            <paper-dropdown-menu id="campusSelect" label="Campus" class="{{errors.campus ? 'error' : ''}}">
+            <paper-dropdown-menu id="campusSelect" label="{{errors.campus ? errors.campus : 'Campus'}}" class="{{errors.campus ? 'error' : ''}}">
               <paper-dropdown class="dropdown">
                 <core-menu class="menu" selected="{{selectedCampus}}">
                   <template repeat="{{campuses as item}}">
-                    <paper-item name="{{item.id}}" label="{{item.title}}"></paper-item>
+                    <paper-item name="{{item.id}}" label="{{item.title}}">{{item.title}}</paper-item>
                   </template>
                 </core-menu>
               </paper-dropdown>
@@ -55,7 +55,7 @@ Element providing solution to no problem in particular.
               <paper-dropdown class="dropdown">
                 <core-menu class="menu" selected="{{selectedBuilding}}">
                   <template repeat="{{building in buildings}}">
-                    <paper-item name="{{building.id}}" label="{{building.title}}"></paper-item>
+                    <paper-item name="{{building.id}}" label="{{building.title}}">{{building.title}}</paper-item>
                   </template>
                 </core-menu>
               </paper-dropdown>
@@ -65,8 +65,7 @@ Element providing solution to no problem in particular.
               <paper-dropdown class="dropdown">
                 <core-menu class="menu" selected="{{selectedRoom}}">
                   <template repeat="{{rooms as room}}">
-                    <paper-item name="{{room.id}}" label="{{room.title}}">
-                    </paper-item>
+                    <paper-item name="{{room.id}}" label="{{room.title}}">{{room.title}}</paper-item>
                   </template>
                 </core-menu>
               </paper-dropdown>
@@ -78,8 +77,7 @@ Element providing solution to no problem in particular.
             <paper-dropdown class="dropdown">
               <core-menu class="menu">
                 <template repeat="{{dates as date}}">
-                  <paper-item name="{{date.value}}" label="{{date.text}}">
-                  </paper-item>
+                  <paper-item name="{{date.value}}" label="{{date.text}}">{{date.text}}</paper-item>
                 </template>
               </core-menu>
             </paper-dropdown>
@@ -89,8 +87,8 @@ Element providing solution to no problem in particular.
           <md-timepicker id="timepicker" on-time-selected="{{timeSelectedHandler}}" hidden></md-timepicker>
           <div class="sliderWrapper" layout horizontal justified center>
             <div>Duration</div>
-            <paper-slider flex id="timePeriod" pin step="0.5" min="0.5" max="4" value="{{selectedDuration}}"></paper-slider>
-            <div end-justified>{{selectedDuration}} hour(s)</div>
+            <paper-slider flex id="timePeriod" pin step="0.5" min="0.5" max="4" immediateValue="{{durationImmidiate}}" value="{{selectedDuration}}"></paper-slider>
+            <div end-justified style="width: 65px;">{{durationImmidiate}} hour(s)</div>
           </div>
 
         </uqlibrary-filter-group>
@@ -139,16 +137,22 @@ Element providing solution to no problem in particular.
     Polymer('uqlibrary-fbs-filter-form', {
 
 
+      publish: {
+        selectedValues: {
+          observe: 'selectedValuesChanged',
+          value: {}
+        }
+
+      },
+
       observe: {
         'formData.facilities': 'facilitiesChanged',
         'formData.dates': 'initialDatesChanged',
-        'selectedValues': 'selectedValuesChanged'
       },
 
       created: function() {
-        this.selectedValues = {};
-      },
 
+      },
 
       campuses: [],
       buildings:[],
@@ -170,30 +174,8 @@ Element providing solution to no problem in particular.
       dayNames: ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'],
 
       ready: function() {
+        this.addEventListener('submit-form', this.submitForm);
       },
-
-      /*initializeLayout: function() {
-        var wrappersToProceed = this.shadowRoot.getElementsByClassName("groupContentWrapper");
-        if(wrappersToProceed) {
-          for(var i = 0; i < wrappersToProceed.length; i++) {
-            var _el = wrappersToProceed[i];
-            if(_el.hasAttribute('responsiveWidth')) {
-              if(window.innerWidth < parseInt(_el.getAttribute('responsiveWidth'))) {
-                _el.removeAttribute('horizontal');
-                _el.setAttribute('vertical','');
-              }
-              else {
-                _el.removeAttribute('vertical');
-                _el.setAttribute('horizontal','');
-
-              }
-            }
-          }
-        }
-
-
-      },*/
-
 
       submitForm: function() {
         this.getSelectedValues();
@@ -221,9 +203,11 @@ Element providing solution to no problem in particular.
       validateForm: function() {
         this.errors = {};
         var isValid = true;
+
         if(!this.selectedCampus) {
           this.errors['campus'] = 'Select campus';
           isValid = false;
+          this.$.campusSelect.focus();
         }
         return isValid;
       },
@@ -321,13 +305,6 @@ Element providing solution to no problem in particular.
         this.loadRooms();
       },
 
-      selectedRoomChanged: function(oldValue, newValue) {
-      },
-
-      selectedDateChanged: function(oldValue, newValue) {
-        //this.selectedValues.date = newValue;
-      },
-
       selectedValuesChanged: function(oldValue, newValue) {
         if(this.selectedValues) {
           this.selectedCampus = this.selectedValues.campus;
@@ -337,7 +314,10 @@ Element providing solution to no problem in particular.
           this.selectedTime = this.selectedValues.time;
           this.selectedDuration = this.selectedValues.duration;
           this.selectedCapacity = this.selectedValues.capacity;
-          this.selectedEquipment = this.selectedValues.equipment;
+          this.selectedEquipment = (this.selectedValues.equipment ? this.selectedValues.equipment : {});
+        }
+        else {
+          this.selectedValues = {};
         }
       },
 
@@ -350,8 +330,8 @@ Element providing solution to no problem in particular.
         this.selectedValues.duration = this.selectedDuration;
         this.selectedValues.capacity = this.selectedCapacity;
         this.selectedValues.equipment = this.selectedEquipment;
-
       },
+
 
       timeSelectedHandler: function(e, value) {
         this.selectedTime = value.time;
